# Google-Cloud-Data-Engineering

./: README.md  pyproject.toml  requirements.txt
bigquery/: bq_create_table.py  bq_run_query.py  bq_write_data.py  config.py  utils.py
pub_sub/: config.py  publish.py  subscribe.py  utils.py
storage/: config.py  storage_conn.py  storage_download.py  storage_upload.py  utils.py
